--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.1",
     "codemirror": "^5.65.15",
+    "firebase": "^11.0.1",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.0",
